--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +21,8 @@
             </div>
         </section>
         <!-- playground start-->
-        <section id="play-ground"></section>>
-            <div class="flex flex-col items-center gap-20 pt-20 hidden">
+        <section id="play-ground" class="hidden">
+            <div class="flex flex-col items-center gap-20 pt-20">
                 <!-- screen -->
                 <div
                     class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
@@ -66,8 +66,7 @@
                         <kbd id="v" class="kbd">v</kbd>
                         <kbd id="b" class="kbd">b</kbd>
                         <kbd id="n" class="kbd">n</kbd>
-                        <kbd id="m" class="kbd">m</kbd>
-                        <kbd id="/" class="kbd">/</kbd>
+                        <kbd id="m" class="kbd">m</kbd>                        
                     </div>
                 </div>
                 <!-- keyboard end -->
@@ -100,5 +99,7 @@
             </div>
         </section>
     </main>
-    <script src="scripts/utility.js"></script>
-    <script src="scripts/alpha-clash.js"></script>
+    <script src="utility.js"></script>
+    <script src="alpha-clash.js"></script>
+</body>
+</html>
