updated some elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="home-screen" class="min-h-screen text-white flex justify-center items-center">
             <div class="flex flex-col items-center gap-10">
                 <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
-                <p>Unleash Your Keyboard Kun g Fu : Press “Enter” to Play</p>
+                <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
                 <button onclick="play()" class="btn bg-white text-black">Play Now</button>
             </div>
         </section>
@@ -75,12 +75,12 @@
                     <button class="btn rounded-full bg-purple-300 text-white px-4">
                         Life
                         <img src="images/heart.svg" alt="">
-                        <span>1</span>
+                        <span id="life">5</span>
                     </button>
                     <button class="btn rounded-full bg-purple-700 text-white px-4">
                         Score
                         <img src="images/dollar.svg" alt="">
-                        <span>1</span>
+                        <span id="score">0</span>
                     </button>
 
                 </div>
